mantle-macros/tests/ui/multi_service_derive.stderr
error: `service!` must contain exactly one #[derive(Service)] struct. Additional occurrence here:
 --> $DIR/multi_service_derive.rs:7:5
  |
7 |     #[derive(Service)]
  |     ^

error: aborting due to previous error

